Bugfix/sc 235  nested section spacing (#679)
* SC-235: correct method to remove nested section spacing

* SC-235: select nested elemetn by class not tag

--- a/source/_patterns/02-molecules/section/_section.scss
+++ b/source/_patterns/02-molecules/section/_section.scss
@@ -20,7 +20,7 @@ $_config: map-merge-by-keys($_config_schemes, base, $_config_schemes, $scheme);
   @include u-padding-top(9);
 
   .jcc-section {
-    &:first-child {
+    &:first-of-type {
       @include u-padding-top(0);
     }
 
